@@ -31,4 +31,5 @@ master - gets deployed (hm...)
 2.0.13 - adding path /contact
          adding /pages/promo-1, moving Map out of ContactUs.
 2.0.14 - careers page, again.
-
+         added one case study, reworked the navigation to not have
+				 "loading..." pages
